Fixed alignment on ETH and clock paragraphs

--- a/FrontEndMentor/NFTPreviewCard/style.css
+++ b/FrontEndMentor/NFTPreviewCard/style.css
@@ -31,23 +31,20 @@ body {
 }
 
 #card-container {
-    /* display: flex; */
-    /* align-items: center;
-    flex-direction: column; */
+    display: flex;
+    padding: 1.5rem;
+    flex-direction: column;
     background-color: var(--card-bg-color);
     border-radius: 1rem;
     flex: 0;
-    /* border: 3px solid var(--generic-white); */
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+
 }
 
 
-.card-image {
-    /* margin: 1em; */
-}
 
 .cube-image {
-    /* top right down left */
-    margin: 1.5em;
+
     border-radius: 1rem;
     width: 350px;
 }
@@ -55,11 +52,10 @@ body {
 
 #card-text {
     border: 2px solid var(--generic-white);
-    /* background-color: inherit; */
 }
 
 
-.text-info{
+.text-info {
     display: flex;
     flex-direction: column;
 }
@@ -67,59 +63,74 @@ body {
 
 .card-title {
 
-        /* top right down left */
     color: var(--generic-white);
-    background-color: inherit;
-    margin: 0 1.5em 0 1.5em;
 
 }
 
 .card-description {
     color: var(--primary-soft-blue);
     font-weight: 300;
-    background-color: inherit;
-    margin: 12px 36px 0 36px;
     padding: 0;
-   
+    margin-top: 0;
+    margin-bottom: 1rem;
 
 }
 
-.card-paragraphs{
+.card-paragraphs {
     display: flex;
+    /* align-items: center; */
     justify-content: space-between;
-    margin: 0 1.5em 0 1.5em;
     font-size: var(--paragraph-font-size);
     border: 1px solid var(--line-color);
     border-width: 0 0 thin 0;
     border-radius: 1px;
-    
+    padding-bottom: 1rem;
+    margin: 0;
 
 }
+
+
+
+
 
 .eth {
     color: var(--primary-cyan);
     font-weight: 600;
-    
+    margin: 10px;
+
 
 }
 
 .clock {
     color: var(--primary-soft-blue);
     font-weight: 300;
-    /* margin: 20px; */
+    margin: 10px;
 
 }
 
-.card-footer{
+
+
+.eth-section{
     display: flex;
     align-items: center;
-    margin: 0 1.5em 0 1.5em;
+}
+
+.time-section{
+    display: flex;
+    align-items: center;
+}
+
+
+
+.card-footer {
+    display: flex;
+    align-items: center;
     font-size: var(--paragraph-font-size);
 
 
 }
 
-.card-footer img{
+.card-footer img {
     border: 1px solid var(--generic-white);
     border-radius: 50%;
     flex: 0 1 auto;
@@ -129,11 +140,15 @@ body {
 
 }
 
-.card-footer span{
+.card-footer span {
     color: var(--primary-soft-blue);
-    
+
 }
 
-.card-footer p{
-    color: var(--generic-white)
+.card-footer p {
+    color: var(--generic-white);
 }
+
+
+/* MEDIA controls below this line */
+
